--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2235,10 +2235,12 @@ nav ul{
       margin-top: 0;
     margin-bottom: 0;
 }
+
+section.menu{
+  background-size: 600%;
 }
 
-
-
+}
 
 @media only screen and (max-width: 660px) {
 
