--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1583,6 +1583,7 @@ border-radius: 0 !important;
     top: -10px;
     font-size: 18.75px;
     padding-top: 9.5px;
+
   }
 
 
@@ -1599,6 +1600,7 @@ border-radius: 0 !important;
     top: -10px;
     font-size: 18.75px;
     padding-top: 8.5px;
+        height: 30px;
 
   }
 
@@ -1617,6 +1619,7 @@ border-radius: 0 !important;
     top: -10px;
     font-size: 18.75px;
     padding-top: 8.5px;
+        height: 30px;
 
   }
 
@@ -1635,6 +1638,7 @@ border-radius: 0 !important;
     top: -10px;
     font-size: 18.75px;
     padding-top: 8.5px;
+        height: 30px;
 
   }
 
