--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 
 
+
+
+
+
 /*thicker fonts*/
 
 @font-face {
@@ -2748,3 +2752,8 @@ nav.mobile-nav ul li:first-child{
 
 }
 
+
+*{
+-webkit-tap-highlight-color: rgba(0,0,0,0);
+-webkit-tap-highlight-color: transparent;
+}
