--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1547,7 +1547,7 @@ width: 100%;
 height: 100vh;
 top: 0;
 background: #F2C217;
-color: #031191;
+  color: #0524d8;
 left: 0;
 z-index: 100000;
 display: block;
