--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -427,9 +427,10 @@ height: 100%;
     </div>
 <div class="events-description">
 
+<div class="events-booking-text-box">
 
 {{ block.eventsbookingDescription }}
-
+</div>
 </div>
 
 <div class="events-row">
@@ -472,10 +473,21 @@ height: 100%;
             <div class="field for-message">
                 <!-- <label for="message">Message:</label> -->
 
+
+
+
                 <textarea placeholder="message" id="message" name="message" required></textarea>
 
-                <input type="submit" value="Send" style="z-index: 1000;">
+
+
             </div>
+
+
+<div class="field submission">
+    <input type="submit" value="Send" style="z-index: 1000;">
+
+</div>
+
 <!--
             <div class="field">
                 <button type="submit">Send</button>
