--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,7 +191,6 @@ img.logo{
 
 .contact-item{
   background-image: url(../img/contact-item-bg.svg);
-  /*background-size: 210px 144px;*/
   background-repeat: no-repeat;
   width: 210px;
   color: white;
@@ -200,13 +199,11 @@ img.logo{
   font-family: 'AvenirLTStdthick';
   -webkit-transition: background-image 0.2s ease-in;
   transition: background-image 0.2s ease-in;
+    background-position: center center;
 }
 
 .contact-item:hover{
-        background-image: url(../img/contact-item-bg-hover.svg);
-      /*background-color: white;*/
-    /*-webkit-mask:  url(../img/contact-item-bg.svg) no-repeat 50% 50%;*/
-    /*mask: url(../img/contact-item-bg.svg) no-repeat 50% 50%;*/
+  background-image: url(../img/contact-item-bg-hover.svg);
 }
 
 
