--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,7 @@ nav a:hover{
 
 img.logo{
   width: 280px;
-  margin-left: 10px;
+  margin-left: 30px;
 }
 
 
@@ -481,7 +481,7 @@ section.menu{
 
 
 .panels{
-  border: 2.8px solid #F2C217;
+  border: 3px solid #F2C217;
   border-radius: 10px;
   padding: 3px;
 }
@@ -491,6 +491,7 @@ section.menu{
   width: 1170px;
   margin: 0 auto;
     border-radius: 30px;
+    margin-top: -1px;
 }
 
 .panels.two{
@@ -2486,6 +2487,8 @@ padding-top: 55px;
 
 img.logo {
     width: 60%;
+  margin-left: 2px;
+
 }
 
 #header h1 {
