--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1797,6 +1797,11 @@ form textarea{
 }
 
 
+#owl1 .owl-stage{
+  margin-top: -4px !important;
+  margin-bottom: -4px !important;
+}
+
 @media only screen and (max-width: 1560px) {
 
 .item-single:nth-child(6n+6){
