--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1724,7 +1724,7 @@ border-radius: 0 !important;
     padding-top: 20px;
     padding-bottom: 20px;
     color: #EC1C24;
-    background: #F2C217;
+    background: #FFCC3E;
     line-height: 32px;
     font-size: 14px;
 }
