--- a/public/css/style.css
+++ b/public/css/style.css
@@ -681,7 +681,7 @@ display: block
 .slideshow-box-text{
     background: #FFCC3E;
     min-height: 154px;
-    padding-bottom: 4px;
+    padding-bottom: 24px;
     width: 100%;
     position: relative;
 }
@@ -766,12 +766,14 @@ display: block
     width: 554px;
     height: 368px;
     padding: 12px;
-    height: 360px;
+    height: 362px;
     padding: 12px;
     overflow: hidden;
-    border-bottom: 12px solid #F7D151;
+    border-bottom: 9px solid #F7D151;
     position: relative;
 }
+
+
 
 
 .events-row {
@@ -2896,3 +2898,26 @@ nav.mobile-nav ul li:first-child{
 -webkit-tap-highlight-color: rgba(0,0,0,0);
 -webkit-tap-highlight-color: transparent;
 }
+
+
+form input[type="submit"] {
+    width: 100px;
+    height: 100px;
+    bottom: 0px;
+    border: 0;
+    color: yellow;
+    background: transparent;
+    background-image: url();
+    background: #031191;
+    background-repeat: no-repeat;
+    height: 38px;
+    text-transform: lowercase;
+    width: 100%;
+    position: inherit;
+    margin-bottom: 36px;
+    width: 100%;
+    padding: 8px;
+    padding-left: 16px;
+    margin-left: 8px;
+
+    }
