--- a/public/css/style.css
+++ b/public/css/style.css
@@ -838,8 +838,8 @@ form input[type="submit"]{
 }
 
 form textarea{
-  height: 56px;
-  padding-bottom: 15px;
+    height: 118px;
+    padding-bottom: 15px;
 }
 
 /*form textarea{
@@ -1770,12 +1770,12 @@ form textarea{
       /*width: 430px;*/
 }
 
-
+/*
 form input[type="submit"]{
   right: 0;
 
 
-}
+}*/
 
 /*.field{*/
   /*background: #F7D151;*/
@@ -1788,8 +1788,8 @@ form textarea{
 
 
 .field.submission{
-  height:100px;
-  margin-bottom: 36px;
+    height: 38px;
+    margin-bottom: 0;
 }
 
 
@@ -1932,10 +1932,10 @@ form textarea, form input[type="text"], form input[type="email"] {
    width: 96%;
 }
 
-
+/*
 form input[type="submit"] {
    right: -1px;
-}
+}*/
 
 }
 
@@ -1997,9 +1997,9 @@ form textarea, form input[type="text"], form input[type="email"] {
 }
 
 
-form input[type="submit"] {
+/*form input[type="submit"] {
 right: -21px;
-}
+}*/
 
 
 .hours p {
@@ -2689,9 +2689,9 @@ padding-top: 7px;
 
 
 
-form input[type="submit"] {
+/*form input[type="submit"] {
     right: 8px;
-}
+}*/
 
 .slideshow-box-text p {
     font-size: 14px;
@@ -2708,7 +2708,7 @@ form input[type="submit"] {
     width: 60%;
   }
 
-form input[type="submit"] {
+/*form input[type="submit"] {
     width: 100px;
     height: 100px;
     bottom: 0px;
@@ -2728,7 +2728,7 @@ form input[type="submit"] {
     padding-left: 16px;
     margin-left: 8px;
 
-    }
+    }*/
 
 .contact-item:last-child{
         margin-right: 5px;
@@ -2914,10 +2914,10 @@ form input[type="submit"] {
     text-transform: lowercase;
     width: 100%;
     position: inherit;
-    margin-bottom: 36px;
+    margin-bottom: 0;
     width: 100%;
     padding: 8px;
     padding-left: 16px;
-    margin-left: 8px;
+    margin-left: 0;
 
     }
