--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2918,8 +2918,8 @@ form input[type="submit"] {
     width: 100%;
     padding: 8px;
     padding-left: 16px;
-    margin-left: 0;
-
+    /*margin-left: 0;*/
+    margin-left: 10px;
     }
 
 
