--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -70,10 +70,10 @@ stuff here
 
 
 
-<script src="https://widgets.resy.com/embed.js"></script>
-<script>
-    resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
-</script>
+<!-- <script src="https://widgets.resy.com/embed.js"></script> -->
+// <script>
+    // resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
+// </script>
 
 
 
