--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -118,7 +118,7 @@ twitter
 
 <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span>
 
-
+<!-- <span href="https://resy.com/cities/sea/mbar" id="resyButton-w6cxoffp">_</span> -->
 
 
   <!-- <a href="" class="contact-line"> -->
