--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2927,5 +2927,8 @@ form input[type="submit"] {
 .field.submission{
     height: transparent;
     background: transparent;
+    width: 100%;
+    padding: 0px 8px 0px 12px;
+    background: no-repeat rgb(3, 17, 145);
 }
 
