--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2930,5 +2930,6 @@ form input[type="submit"] {
     width: 100%;
     padding: 0px 8px 0px 12px;
     background: no-repeat rgb(3, 17, 145);
+    margin-bottom: 36px;
 }
 
