--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2919,17 +2919,29 @@ form input[type="submit"] {
     padding: 8px;
     padding-left: 16px;
     /*margin-left: 0;*/
-    margin-left: 10px;
+    /*margin-left: 10px;*/
     }
 
 
 
-.field.submission{
+
+
+
+#ajax-contact .field.submission{
     height: transparent;
     background: transparent;
     width: 100%;
-    padding: 0px 8px 0px 12px;
     background: no-repeat rgb(3, 17, 145);
-    margin-bottom: 36px;
 }
+
+@media only screen and (max-width: 1024px) {
+
+#ajax-contact .field.submission{
+    padding: 0px 8px 0px 12px;
+}
+
+}
+
+
+
 
