--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2932,15 +2932,22 @@ form input[type="submit"] {
     background: transparent;
     width: 100%;
     background: no-repeat rgb(3, 17, 145);
+    background: transparent;
+    margin-left: 10px;
+    padding: 0;
+
 }
 
-@media only screen and (max-width: 1024px) {
+
+@media only screen and (max-width: 1124px) {
 
 #ajax-contact .field.submission{
     padding: 0px 8px 0px 12px;
+    margin-bottom: 36px;
 }
 
 }
+
 
 
 
