--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2963,6 +2963,11 @@ form input[type="submit"] {
 }
 
 
+@media only screen and (max-width: 1056px) {
+#ajax-contact .field.submission{
+    background: no-repeat rgb(3, 17, 145);
+}
+}
 
 
 
