--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2948,8 +2948,11 @@ form input[type="submit"] {
 #ajax-contact .field.submission{
   padding-left: 10px;
   margin-left: 0;
+
 }
 
 
-
-
+#ajax-contact .field.submission{
+  margin-bottom: 36px;
+  background: no-repeat rgb(3, 17, 145);
+}
