--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,7 @@ img#image{
 
 nav{
     background: #6EBAFF;
+background: #31A7FF;
     width: 100%;
     height: 57px;
     margin-top: 10px;
@@ -1372,9 +1373,9 @@ body.fixedwaypoint{
 
 .hide-on-desk{
   display: none;
+  background: #31A7FF;
 
 
-    background: rgb(110, 186, 255);
 }
 
 
