--- a/public/css/style.css
+++ b/public/css/style.css
@@ -609,7 +609,7 @@ display: block
 
 
 .find-panel{
-  background: #031191;
+  background-color: #425960;
   width: 534px;
   margin: 0 auto;
   padding: 15px;
