--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -71,9 +71,9 @@ stuff here
 
 
 <!-- <script src="https://widgets.resy.com/embed.js"></script> -->
-// <script>
+<script>
     // resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
-// </script>
+</script>
 
 
 
