--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1220,9 +1220,10 @@ footer{
 .item-description-modal p{
     color: #00AEEF;
     font-size: 16px;
-    line-height: 40px;
+    line-height: 24px;
     margin-top: 0 !important;
     font-family: 'Avenir LT Std 65 Medium';
+    padding-top: 10px;
 }
 
 
