--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2960,3 +2960,13 @@ form input[type="submit"] {
     padding-left: 10px;
     width: initial;
 }
+
+
+
+.find-panel .address{
+  font-size: 16.5px;
+  color: rgb(242, 194, 23);
+  font-style: oblique;
+  font-family: AvenirLTStdHeavyObliquethick;
+  margin-bottom: 10px;
+}
