--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2970,3 +2970,9 @@ form input[type="submit"] {
   font-family: AvenirLTStdHeavyObliquethick;
   margin-bottom: 10px;
 }
+
+.find-panel .address a{
+    font-size: 16.5px;
+  color: rgb(242, 194, 23);
+  font-style: oblique;
+}
