--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -280,6 +280,9 @@ twitter
     find us!
 </div>
 
+<div class="address"><a href="https://goo.gl/maps/gZLnSb6DpV12" target="_blank">
+400 Fairview Ave N, Seattle, WA 98109
+</a><a></a></div>
 
 
 <style>
