--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1107,7 +1107,7 @@ input:focus {
 
 
 .media .expand-button{
-    background-image: url(../img/expand-button.gr.svg);
+    background-image: url(../img/expand-button-gr.svg);
 
 }
 
