--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,7 +212,7 @@ img.logo{
 
 /*.contact-item:hover .contact-item-text a,*/
 .contact-item:hover .contact-item-text span:before{
-  color: #0524d8 !important;
+  color: #425960 !important;
 }
 
 .contact-item:first-child{
