--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2445,7 +2445,7 @@ section.menu{
 
 
 .contact-item:hover .contact-item-text a{
-  color: #0524d8 !important;
+  color: #425960 !important;
 }
 
 .contact-item:hover{
