--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1514,7 +1514,7 @@ width: 100%;
     width: 100%;
     text-align: center;
     line-height: 36px;
-    background: #F2C217;
+    background: #FFCC3E;
     font-size: 15px;
     line-height: 36px;
     position: relative;
