--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2982,3 +2982,8 @@ form input[type="submit"] {
   font-style: oblique;
   text-decoration: none;
 }
+
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px #F7D151 inset !important;
+}
