--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2987,3 +2987,16 @@ form input[type="submit"] {
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 1000px #F7D151 inset !important;
 }
+
+
+#ajax-contact .field.submission input{
+background: transparent;
+}
+
+
+
+@media only screen and (max-width: 660px) {
+  #ajax-contact .field.submission {
+    background: no-repeat rgb(3, 17, 145) !important;
+  }
+}
