--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2991,6 +2991,7 @@ input:-webkit-autofill {
 
 #ajax-contact .field.submission input{
 background: transparent;
+    padding: 10px 8px 8px 12px;
 }
 
 
