--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,7 +266,7 @@ float: right
   /*font-family: 'Avenir LT Std 65 Medium Oblique';*/
   font-style:   oblique;
   font-family: 'AvenirLTStdHeavyObliquethick';
-
+    font-family: "Avenir LT Std 65 Medium";
   /*font-family: AvenirLTStdthick;*/
 
 
@@ -2967,6 +2967,7 @@ form input[type="submit"] {
   color: rgb(242, 194, 23);
   font-style: oblique;
   font-family: AvenirLTStdHeavyObliquethick;
+    font-family: "Avenir LT Std 65 Medium";
   margin-bottom: 10px;
 }
 
