--- a/public/css/style.css
+++ b/public/css/style.css
@@ -269,7 +269,7 @@ float: right
     font-family: "Avenir LT Std 65 Medium";
   /*font-family: AvenirLTStdthick;*/
 
-
+font-family: 'Avenir LT Std 65 Medium';
 }
 
 
