--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,6 +266,7 @@ float: right
   color: #0524D8;
   font-style:   oblique;
 font-family: 'Avenir LT Std 65 Medium';
+    font-family: 'AvenirLTStdHeavyObliquethick';
 }
 
 
@@ -2965,6 +2966,7 @@ form input[type="submit"] {
   font-family: AvenirLTStdHeavyObliquethick;
     font-family: "Avenir LT Std 65 Medium";
   margin-bottom: 10px;
+      font-family: 'AvenirLTStdHeavyObliquethick';
 }
 
 .find-panel .address a{
