--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -61,6 +61,8 @@ stuff here
 {% includeJsFile "js/jquery.sticky.js" %}
 
 
+{% includeJsFile "https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js" %}
+
 
 
 {% includeJsFile "js/main.js" %}
@@ -70,10 +72,8 @@ stuff here
 
 
 
-<!-- <script src="https://widgets.resy.com/embed.js"></script> -->
-<script>
-    // resyWidget.addButton(document.getElementById('resyButton-w6cxoffp'), {"venueId":661,"apiKey":"5Sbh49jsnE05KjGFluXWWCTKXwYvF6qV","replace":true});
-</script>
+
+
 
 
 
