--- a/public/css/style.css
+++ b/public/css/style.css
@@ -598,7 +598,7 @@ display: block
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
+    background-position: -1px;
 
 }
 
