--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1732,7 +1732,7 @@ border-radius: 0 !important;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
-    color: #EC1C24;
+    color: rgb(66, 89, 96);
     background: #FFCC3E;
     line-height: 32px;
     font-size: 14px;
