--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2219,7 +2219,7 @@ display: none;
 
 
 .find-panel {
-    background: #031191;
+    /*background: #031191;*/
     width: 90%;
     margin: 0 auto;
     padding: 15px;
