--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1530,8 +1530,8 @@ width: 100%;
     font-family: 'Avenir LT Std 65 Medium';
     margin-top: 0;
     margin-bottom: 0;
+    color: #EC297B;
 }
-
 
 
 .announcements .close-announcement{
